support-bundle-2026-05-13T12_07_37/cluster-resources/network-policy/financial-budget.json
{
  "kind": "NetworkPolicyList",
  "apiVersion": "networking.k8s.io/v1",
  "metadata": {
    "resourceVersion": "8328"
  },
  "items": [
    {
      "kind": "NetworkPolicy",
      "apiVersion": "networking.k8s.io/v1",
      "metadata": {
        "name": "financial-budget-postgresql",
        "namespace": "financial-budget",
        "uid": "78f8384a-f0a7-4921-bf6f-ac966d1d9ee6",
        "resourceVersion": "1631",
        "generation": 1,
        "creationTimestamp": "2026-05-13T15:50:11Z",
        "labels": {
          "app.kubernetes.io/component": "primary",
          "app.kubernetes.io/instance": "financial-budget",
          "app.kubernetes.io/managed-by": "Helm",
          "app.kubernetes.io/name": "postgresql",
          "app.kubernetes.io/version": "16.3.0",
          "helm.sh/chart": "postgresql-15.5.0"
        },
        "annotations": {
          "meta.helm.sh/release-name": "financial-budget",
          "meta.helm.sh/release-namespace": "financial-budget"
        },
        "managedFields": [
          {
            "manager": "helm",
            "operation": "Apply",
            "apiVersion": "networking.k8s.io/v1",
            "time": "2026-05-13T15:50:11Z",
            "fieldsType": "FieldsV1",
            "fieldsV1": {
              "f:metadata": {
                "f:annotations": {
                  "f:meta.helm.sh/release-name": {},
                  "f:meta.helm.sh/release-namespace": {}
                },
                "f:labels": {
                  "f:app.kubernetes.io/component": {},
                  "f:app.kubernetes.io/instance": {},
                  "f:app.kubernetes.io/managed-by": {},
                  "f:app.kubernetes.io/name": {},
                  "f:app.kubernetes.io/version": {},
                  "f:helm.sh/chart": {}
                }
              },
              "f:spec": {
                "f:egress": {},
                "f:ingress": {},
                "f:podSelector": {},
                "f:policyTypes": {}
              }
            }
          }
        ]
      },
      "spec": {
        "podSelector": {
          "matchLabels": {
            "app.kubernetes.io/component": "primary",
            "app.kubernetes.io/instance": "financial-budget",
            "app.kubernetes.io/name": "postgresql"
          }
        },
        "ingress": [
          {
            "ports": [
              {
                "protocol": "TCP",
                "port": 5432
              }
            ]
          }
        ],
        "egress": [
          {}
        ],
        "policyTypes": [
          "Ingress",
          "Egress"
        ]
      }
    },
    {
      "kind": "NetworkPolicy",
      "apiVersion": "networking.k8s.io/v1",
      "metadata": {
        "name": "financial-budget-redis",
        "namespace": "financial-budget",
        "uid": "91f69ca5-552d-405d-a9a9-b1ae35192bd0",
        "resourceVersion": "1630",
        "generation": 1,
        "creationTimestamp": "2026-05-13T15:50:11Z",
        "labels": {
          "app.kubernetes.io/instance": "financial-budget",
          "app.kubernetes.io/managed-by": "Helm",
          "app.kubernetes.io/name": "redis",
          "app.kubernetes.io/version": "7.2.5",
          "helm.sh/chart": "redis-19.6.0"
        },
        "annotations": {
          "meta.helm.sh/release-name": "financial-budget",
          "meta.helm.sh/release-namespace": "financial-budget"
        },
        "managedFields": [
          {
            "manager": "helm",
            "operation": "Apply",
            "apiVersion": "networking.k8s.io/v1",
            "time": "2026-05-13T15:50:11Z",
            "fieldsType": "FieldsV1",
            "fieldsV1": {
              "f:metadata": {
                "f:annotations": {
                  "f:meta.helm.sh/release-name": {},
                  "f:meta.helm.sh/release-namespace": {}
                },
                "f:labels": {
                  "f:app.kubernetes.io/instance": {},
                  "f:app.kubernetes.io/managed-by": {},
                  "f:app.kubernetes.io/name": {},
                  "f:app.kubernetes.io/version": {},
                  "f:helm.sh/chart": {}
                }
              },
              "f:spec": {
                "f:egress": {},
                "f:ingress": {},
                "f:podSelector": {},
                "f:policyTypes": {}
              }
            }
          }
        ]
      },
      "spec": {
        "podSelector": {
          "matchLabels": {
            "app.kubernetes.io/instance": "financial-budget",
            "app.kubernetes.io/name": "redis"
          }
        },
        "ingress": [
          {
            "ports": [
              {
                "protocol": "TCP",
                "port": 6379
              }
            ]
          }
        ],
        "egress": [
          {}
        ],
        "policyTypes": [
          "Ingress",
          "Egress"
        ]
      }
    }
  ]
}
